<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EBEFF0"
        android:orientation="vertical"
        tools:context=".ui.neighbour_detail.DetailActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/returnButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:elevation="1dp" />

            <ImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/name_image_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="220dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                tools:text="TextView" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/faButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/fa_button_color"
                app:backgroundTint="#FFFFFF" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="320dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        tools:text="TextView" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#F6F6F6" />

                    <TextView
                        android:id="@+id/addressDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_baseline_room_24"
                        android:drawablePadding="10dp"
                        android:textSize="20sp"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/numberDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="10dp"
                        android:textSize="20sp"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/fbDetailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:drawableStart="@drawable/ic_baseline_language_24"
                        android:drawablePadding="10dp"
                        android:textSize="20sp"
                        tools:text="TextView" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="A propos de moi"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#F6F6F6" />

                <TextView
                    android:id="@+id/hobbyDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="13sp"
                    tools:text="TextView" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>